fix: 💄 fix text wrap

--- a/frontend/src/styles/_fonts.css
+++ b/frontend/src/styles/_fonts.css
@@ -94,6 +94,10 @@ body, p {
 .l-icon { font-size: var(--icon-size-l); }
 
 
+.markdown {
+	overflow-wrap: anywhere;
+}
+
 .markdown h1,
 .markdown h2,
 .markdown h3,
